--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,30 +1,58 @@
-name: Build and Push Docker Image
+name: Advanced CI/CD Pipeline
 
 on:
   push:
     branches:
-      - master   # Changé de "main" à "master"
+      - master   
 
 jobs:
-  build:
+  # Job 1: Continuous Integration
+  build-and-test:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push
-        uses: docker/build-push-action@v4
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           tags: palaye769/projetpython:latest
+
+      # Optionnel : Tests
+      - name: Run Tests (if you have any)
+        run: |
+          echo "Running tests..."
+          # docker run --rm palaye769/projetpython:latest python -m pytest
+
+  # Job 2: Continuous Deployment
+  deploy:
+    needs: build-and-test  # Attend que le build soit terminé
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Deploy to Render
+        run: |
+          echo "🚀 Starting deployment to Render..."
+          curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
+          
+      - name: Wait for deployment
+        run: |
+          echo "⏳ Waiting for deployment to complete..."
+          sleep 30
+          
+      - name: Deployment completed
+        run: |
+          echo "✅ Deployment finished!"
+          echo "Check your Render dashboard for deployment status."
